--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,11 @@ menu:
   Tags: /tags/
   Timeline: /timeline/
   About: /about/
-  Favorite: /favorite/
-  Wiki: //wiki.jamespan.me/
+  # Favorite: /favorite/
+  Github: https://github.com/MellongLau
+
+# WeChat QrCode URL
+wechat: blogImages/qrcode_for_mellong.jpg
 
 
 # Content
@@ -14,12 +17,12 @@ excerpt_link: Read more
 fancybox: true
 profile: true
 # Sidebar
-sidebar: right
+sidebar: false
 widgets:
 - recent_posts
 - links
 
-thumbnail: true
+thumbnail: false
 
 # Miscellaneous
 twitter:
@@ -30,15 +33,15 @@ fb_app_id:
 
 # Contacts
 contacts:
-  github: http://github.com/JamesPan
-  weibo: http://weibo.com/panjiabang
-  twitter: https://twitter.com/_JamesPan_
+  github: http://github.com/MellongLau
+  # weibo: http://weibo.com/panjiabang
+  # twitter: https://twitter.com/_JamesPan_
   # linkedin: https://cn.linkedin.com/pub/jiabang-pan/50/bb4/86
-  telegram: https://telegram.me/jamespan
+  # telegram: https://telegram.me/jamespan
   rss: /atom.xml
 
 #wechat: //i.imgur.com/JDKdlapm.jpg
 
-cnzz: 1000543904
-recruit: true
+# cnzz: 1000543904
+recruit: false
 default_thumbnail: //i.imgur.com/w2aNvOls.jpg
