--- a/_config.yml
+++ b/_config.yml
@@ -15,21 +15,21 @@ customize:
         url: images/logo.png
     profile:
         enabled: true # Whether to show profile bar
-        avatar: css/images/avatar.png
+        avatar: blogImages/qrcode_for_mellong.jpg
         gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-        author: PPOffice
-        author_title: Web Developer & Designer
-        location: Harbin, China
-        follow: https://github.com/ppoffice/
+        author: Mellong
+        author_title: '微信扫描上面头像二维码订阅我的微信公众号：mellong'
+        location: Zhuhai, China
+        follow: http://github.com/MellongLau
     highlight: monokai
     sidebar: right # sidebar position, options: left, right
     thumbnail: true # enable posts thumbnail, options: true, false
     favicon: # path to favicon
     social_links:
-        github: http://github.com/ppoffice/hexo-theme-icarus
-        twitter: /
-        facebook: /
-        dribbble: /
+        github: http://github.com/MellongLau
+        # twitter: /
+        # facebook: /
+        # dribbble: /
         rss: /
 
 # Widgets
@@ -49,7 +49,7 @@ search:
 
 # Comment
 comment:
-    disqus: hexo-theme-icarus # enter disqus shortname here
+    disqus: mellongblog # enter disqus shortname here
     duoshuo: # enter duoshuo shortname here
     youyan: # enter youyan uid here
 
