--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,9 @@ share: default # options: jiathis, bdshare, addtoany, default
 # Plugins
 plugins:
     fancybox: true # options: true, false
-    google_analytics: UA-34848996-3# enter the tracking ID for your Google Analytics
+    google_analytics: UA-34848996-3
     google_site_verification: # enter Google site verification code
-    baidu_analytics: # enter Baidu Analytics hash key
+    baidu_analytics: b29f4457115392934213d1aef151efff
 
 # Miscellaneous
 miscellaneous:
