--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Menus
 menu:
-  Home: .
-  Archives: archives
-  Categories: categories
-  Tags: tags
-  About: about
+  主页: .
+  列表: archives
+  分类: categories
+  标签: tags
+  关于: about
 
 # Customize
 customize:
@@ -30,7 +30,7 @@ customize:
         # twitter: /
         # facebook: /
         # dribbble: /
-        rss: /
+        rss: /atom.xml
 
 # Widgets
 widgets:
